2002-03-01  jacob berkman  <jacob@ximian.com>

	* Makefile.am (install-data-hook): 
	(dist-hook): replace uses of test -e with more portable test -f

Fri Mar  1 14:49:35 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_commit_text): Don't delete
	forward across line boundaries when in overwrite mode.
	(#73145, reported by Ettore Perazzoli)

Fri Mar  1 14:47:39 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_commit_text): Don't
	join up lines.

Fri Mar  1 10:31:14 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtknotebook.c (gtk_notebook_reorder_child):
	Fix signed-unsigned error that was accidentally causing
	negative values to append, do it intentionally. Fix docs 
	to say that negative values append. (Alexey A. Malyshev,
	#73108) 

2002-03-01 Alexey Malyshev <maa@sparc.spb.su>
	
        * gtk+/gtk/gtkitemfactory.c
	fixed a little type in docs for gtk_notebook_set_show_border()
	
Fri Mar  1 09:05:19 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkitemfactory.c (gtk_item_factory_delete_entries):
	Really make it work for paths with underline accelerators. (#69247)

2002-02-28  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextview.c (gtk_text_view_finalize): free the tab array
	for custom tabs, reported by Paolo Maggi #72980
	
Thu Feb 28 19:55:01 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkkeys.c: include gdkkeysysms.h if
	compiling gdk_keyval_convert_case.

	* gtk/gtkmenubar.c (gtk_menu_bar_cycle_focus): Implement
	<Control>Tab <Control><Shift>Tab to cycle between
	all menu bars in a toplevel once one is up.

	* tests/testgtk.c: Add a second menubar, this
	example is already full of crack anyways.

	* gtk/gtkmenushell.c (gtk_menu_shell_key_press): Padd
	unhandled events up to the parent menu shell.

	* gtk/gtkmenuitem.c (gtk_menu_item_select_timeout): Only
	pop up the menu if the parent menu shell is still active.

	* gtk/gtkcontainer.[ch] (_gtk_container_focus_sort): Add a